<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    android:backgroundTint="#020202"
    tools:context=".AlbumChoice">

    <Button
        android:id="@+id/albumOp1"
        android:layout_width="409dp"
        android:layout_height="83dp"
        android:text="@string/italien"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168"
        tools:ignore="Hardcoded" />


    <Button
        android:id="@+id/albumOp2"
        android:layout_width="409dp"
        android:layout_height="80dp"
        android:text="@string/ostwestfalen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352"
        tools:ignore="Hardcoded" />

    <Button
        android:id="@+id/albumOp3"
        android:layout_width="409dp"
        android:layout_height="89dp"
        android:text="@string/urlaub_sterreich"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566"
        tools:ignore="Hardcoded" />

    <Button
        android:id="@+id/StartGame"
        android:layout_width="163dp"
        android:layout_height="154dp"
        android:background="@android:drawable/ic_menu_compass"
        android:text="@string/start_ngame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885"
        tools:ignore="Hardcoded" />

    <TextView
        android:id="@+id/albumUsage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotationX="0"
        android:text="@string/choose_a_set_of_pictures"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056"
        tools:ignore="Hardcoded" />


</androidx.constraintlayout.widget.ConstraintLayout>